# SleakEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Engine/: .gitignore  .gitmodules  CMakeLists.txt
Engine/assets/shaders/: Shader.hlsl  debug_line.vert  debug_line.vert.spv  debug_line_dx12.hlsl  debug_line_gl.frag  debug_line_gl.vert  default_shader.frag  default_shader.frag.spv  default_shader.hlsl  default_shader.vert  default_shader.vert.spv  default_shader_dx12.hlsl  default_shader_gl.vert  shadow_depth.vert  shadow_depth.vert.spv  skinned_shader.frag  skinned_shader.frag.spv  skinned_shader.hlsl  skinned_shader.vert  skinned_shader.vert.spv  skinned_shader_gl.frag  skinned_shader_gl.vert  skybox.frag  skybox.frag.spv  skybox.hlsl  skybox.vert  skybox.vert.spv  skybox_gl.frag  skybox_gl.vert
Engine/include/private/: Window.hpp
Engine/include/private/Core/: ScopedTimer.h
Engine/include/private/Graphics/: BufferBase.hpp  BufferFactory.hpp  ConstantBuffer.hpp  Drawable.hpp  RenderCommandQueue.hpp  RenderCommands.hpp  RenderContext.hpp  RenderHelper.hpp  Renderer.hpp  RendererFactory.hpp  ResourceBase.hpp  ResourceManager.hpp  Shader.hpp  Vertex.hpp
Engine/include/private/Graphics/DirectX/: DirectX11Buffer.hpp  DirectX11CubemapTexture.hpp  DirectX11Renderer.hpp  DirectX11Shader.hpp  DirectX11Texture.hpp  DirectX12Buffer.hpp  DirectX12CubemapTexture.hpp  DirectX12Renderer.hpp  DirectX12Shader.hpp  DirectX12Texture.hpp
Engine/include/private/Graphics/OpenGL/: OpenGLBuffer.hpp  OpenGLCubemapTexture.hpp  OpenGLRenderer.hpp  OpenGLShader.hpp  OpenGLTexture.hpp
Engine/include/private/Graphics/Vulkan/: VulkanBuffer.hpp  VulkanCubemapTexture.hpp  VulkanRenderer.hpp  VulkanShader.hpp  VulkanTexture.hpp
Engine/include/private/Runtime/: InternalGeometry.hpp
Engine/include/public/: GameBase.hpp  Logger.hpp  Renderable.hpp  WindowHelper.hpp
Engine/include/public/Camera/: Camera.hpp  ViewFrustum.hpp
Engine/include/public/Core/: Application.hpp  File.hpp  GameObject.hpp  OSDef.hpp  Object.hpp  Scene.hpp  SceneBase.hpp  Timer.hpp
Engine/include/public/Debug/: DebugLineRenderer.hpp  DebugOverlay.hpp  SystemMetrics.hpp
Engine/include/public/ECS/: Component.hpp
Engine/include/public/ECS/Components/: AnimatorComponent.hpp  CameraController.hpp  FirstPersonController.hpp  FreeLookCameraController.hpp  MaterialComponent.hpp  MeshComponent.hpp  TransformComponent.hpp
Engine/include/public/Events/: ApplicationEvent.h  Delegate.h  Event.h  InputEvent.h  KeyboardEvent.h  MouseEvent.h
Engine/include/public/FileSystem/: Serializable.hpp
Engine/include/public/Input/: InputAction.h  InputEvent.h  InputEventListener.hpp  InputManager.h  KeyCodes.h  Keyboard.hpp  Mouse.hpp
Engine/include/public/Lighting/: AreaLight.hpp  DirectionalLight.hpp  Light.hpp  LightManager.hpp  PointLight.hpp  SpotLight.hpp
Engine/include/public/Math/: Color.hpp  Math.hpp  Matrix.hpp  Quaternion.hpp  Random.hpp  Vector.hpp
Engine/include/public/Memory/: ObjectPtr.h  RefPtr.h  SmartPointer.h  WeakPtr.h
Engine/include/public/Physics/: ColliderComponent.hpp  Colliders.hpp  CollisionDetection.hpp  DynamicAABBTree.hpp  PhysicsWorld.hpp  RigidbodyComponent.hpp
Engine/include/public/Runtime/: AnimationClip.hpp  AnimationStateMachine.hpp  Material.hpp  MeshData.hpp  ModelLoader.hpp  Skeleton.hpp  Skybox.hpp  Texture.hpp
Engine/include/public/UI/: UI.hpp
Engine/include/public/Utility/: Exception.hpp  String.hpp
Engine/include/public/Utility/Container/: Graph.hpp  HashTable.hpp  Heap.hpp  List.hpp  Pair.hpp  PriorityList.hpp  Queue.hpp  Stack.hpp  Tree.hpp
Engine/shaders/: default_shader.vert
Engine/src/: AnimationStateMachine.cpp  AnimatorComponent.cpp  Application.cpp  AreaLight.cpp  Camera.cpp  ColliderComponent.cpp  CollisionDetection.cpp  Color.cpp  DebugLineRenderer.cpp  DebugOverlay.cpp  DirectX11Buffer.cpp  DirectX11CubemapTexture.cpp  DirectX11Renderer.cpp  DirectX11Shader.cpp  DirectX11Texture.cpp  DirectX12Buffer.cpp  DirectX12CubemapTexture.cpp  DirectX12Renderer.cpp  DirectX12Shader.cpp  DirectX12Texture.cpp  DirectionalLight.cpp  DynamicAABBTree.cpp  File.cpp  FirstPersonController.cpp  FreeLookCameraControllerComponent.cpp  GameObject.cpp  Light.cpp  LightManager.cpp  Logger.cpp  Material.cpp  MaterialComponent.cpp  Math.cpp  MeshComponent.cpp  ModelLoader.cpp  OpenGLBuffer.cpp  OpenGLCubemapTexture.cpp  OpenGLRenderer.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  PhysicsWorld.cpp  (+24 more)
Engine/vendors/VulkanSdk/Lib/: libvulkan.so.1
Engine/vendors/glad/: CMakeLists.txt
Engine/vendors/glad/include/glad/: glad.h
Engine/vendors/glad/src/: glad.c
(+1 files in other folders)
